# StudySphere

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
Backend/Backend/: settings.py  urls.py
Backend/groups_courses/: admin.py  apps.py  groups_courses_endpoints.md  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
Backend/groups_courses/migrations/: 0001_initial.py  0002_group_edit_permissions_joinrequest.py
Backend/materials/: admin.py  materials_endopoints.md  models.py  permissions.py  serializers.py  urls.py  validation.py  views.py
Backend/materials/migrations/: 0001_initial.py  0002_alter_material_unique_together.py  0003_alter_label_group_alter_label_max_value_and_more.py
Backend/users/: authentication.py  models.py  serializers.py  urls.py  views.py
Backend/users/migrations/: 0001_initial.py  0002_profile_profile_picture.py
Frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
Frontend/config/: cloudinaryConfig.js
Frontend/src/: index.css  main.jsx  routes.jsx
Frontend/src/api/: authService.js  axios.js  userService.js
Frontend/src/components/: Footer.jsx  Layout.jsx  Login.jsx  LogoutButton.jsx  Navbar.jsx
Frontend/src/components/Layout/: Navbar.jsx
Frontend/src/components/ui/: Loading.jsx
Frontend/src/context/: AuthContext.jsx
Frontend/src/pages/: Home.jsx  Login.jsx  Profile.jsx  Register.jsx
Frontend/src/views/: Profile.tsx
(+11 files in other folders)
