[project]
name = "studysphere"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "asgiref==3.8.1",
  "django==5.1.5",
  "django-cors-headers>=4.7.0",
  "django-environ==0.12.0",
  "djangorestframework==3.15.2",
  "djangorestframework-simplejwt==5.4.0",
  "dnspython==2.7.0",
  "email-validator==2.2.0",
  "gunicorn==23.0.0",
  "idna==3.10",
  "packaging==24.2",
  "psycopg2-binary==2.9.10",
  "pyjwt==2.10.1",
  "sqlparse==0.5.3",
  "typing-extensions==4.12.2",
  "uvicorn-worker>=0.3.0",
  "uvicorn[standard]>=0.35.0",
]
